45
================

17/10/21 Add warn when adopting to a banned address #1054
15/10/21 When checking current owner, fosters are exit if option not set
14/10/21 If species is different, fail lost/found match altogether
12/10/21 cron tasks not adjusting for dst
12/10/21 Autoprocess attach->create should still create if attach fails
10/10/21 Petcademy: now require encryption and named folder
08/10/21 Output text when adoptable_js has no results #1052
07/10/21 PetLink: temp fix for issues with quoted line breaks in CSV
06/10/21 Include european field names in online form autofill
05/10/21 Completed filter for find incident
01/10/21 Do not include permanent fosters in long term animal alerts
28/09/21 Add Identibase (972055*/en_GB) to known chips
28/09/21 Do not show medical warning for non-active treatments
23/09/21 Fix bad type coercion in clone/update onlineform.AutoProcess
22/09/21 Add Rabies Tag column to vaccination views
17/09/21 Option to prefix animal codes during import #1027
15/09/21 Copy the current vet from template animals
15/09/21 Support comments field on all online form records
14/09/21 Option to allow auto processing of online forms #1051
13/09/21 A 0 value in Petfinder notGood fields indicates yes
10/09/21 Fix dead incident diary links
10/09/21 Button to convert trial adoptions to full adoption #1030
10/09/21 Emblem for courtesy listing flag #1036
09/09/21 Add Country/OwnerCountry wordkey
09/09/21 Do not split annual adoptions by default, rearrange logically
08/09/21 Fosterer email should not include ungiven from non-active regimens
07/09/21 Add locale for en_TZ (Tanzania)
06/09/21 Online form: create incident not using default
04/09/21 Update diary link info for non-animals when record is updated #1029
04/09/21 Warning when adopting an animal with outstanding meds #959
03/09/21 Ability to make rota work types inactive #1050
02/09/21 Add radius attribute to SavourLife
30/08/21 PetFinder allow additional fields for colors/coat_length #767