@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Sun 17 Oct 09:39:36 BST 2021]"
-BUILD = "10170939"
+VERSION = "45u [Sun 17 Oct 10:16:15 BST 2021]"
+BUILD = "10171016"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
