@@ -11,7 +11,7 @@ $(function() {
                 '<ul>',
                 '<li><a href="#tab-animalselection">' + _("Animal Selection") + '</a></li>',
                 '<li><a href="#tab-allpublishers">' + _("All Publishers") + '</a></li>',
-                '<li><a href="#tab-htmlftp">' + _("HTML/FTP Publisher") + '</a></li>',
+                '<li class="hashtmlftp"><a href="#tab-htmlftp">' + _("HTML/FTP Publisher") + '</a></li>',
                 '<li class="localeus localeca localemx"><a href="#tab-adoptapet">AdoptAPet</a></li>',
                 '<li><a href="#tab-helpinglostpets">HelpingLostPets</a></li>',
                 '<li class="english hasmaddiesfund"><a href="#tab-maddiesfund">Maddie\'s Fund</a></li>',
@@ -480,9 +480,6 @@ $(function() {
                 '<td><label for="publishdir">' + _("Publish to folder") + '</label></td>',
                 '<td><input id="publishdir" type="text" class="asm-textbox preset" data="publishdirectory" /></td>',
                 '</tr>',
-                '<tr id="publishdiroverride" style="display: none">',
-                '<td>' + _("Publish to folder") + '</td>',
-                '<td><a href="#"></a></td>',
                 '</table>',
                 '</td>',
                 '<td>',
@@ -1072,22 +1069,6 @@ $(function() {
             // Disable publisher panels when the checkbox says they're disabled
             $(".enablecheck").change(change_checkbox);
 
-            // Disable publishing to a folder if it was overridden
-            if (controller.publishurl != "") {
-                $("#publishdirrow").hide();
-                $("#publishdiroverride").show();
-                let url = controller.publishurl;
-                url = url.replace("{alias}", asm.useraccountalias);
-                url = url.replace("{database}", asm.useraccount);
-                url = url.replace("{username}", asm.user);
-                $("#publishdiroverride a").attr("href", url).text(url);
-            }
-
-            // Disable ftp upload controls if ftp has been overridden
-            if (controller.hasftpoverride) {
-                $("#ftpuploadtable").hide();
-            }
-
             // Toolbar buttons
             $("#button-save").button().click(async function() {
                 $("#button-save").button("disable");
@@ -1120,6 +1101,7 @@ $(function() {
             // Disable services that require sitedef setup
             if (!controller.hasakcreunite) { $(".hasakcreunite").hide(); }
             if (!controller.hasfoundanimals) { $(".hasfoundanimals").hide(); }
+            if (!controller.hashtmlftp) { $(".hashtmlftp").hide(); }
             if (!controller.hashomeagain) { $(".hashomeagain").hide(); }
             if (!controller.hasmaddiesfund) { $(".hasmaddiesfund").hide(); }
             if (!controller.haspetcademy) { $(".haspetcademy").hide(); }
